--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 id dignissim et, convallis non tellus. Aenean vehicula laoreet vehicula.</p>
         </div>
         <div class="contact-image">
-            <img src="images/contact.jpg" />
+            <img src="images/contact.jpg" alt="" />
         </div>
         <div class="contact text-block">
             <a id="contact"></a>
